Siguiendo con el curso

--- a/Javascrip/index.html
+++ b/Javascrip/index.html
@@ -7,7 +7,7 @@
     <title>manipulacion del dom</title>
 </head>
 <body>
-    <h1>manipulacion del dom</h1>
+    <h1 pantalla="platzilg">manipulacion del dom</h1>
     <p>esto es un parrafo</p>
     <p class="parrafito">Esto es un parrafo con clase</p>
     <p id="pid">Esto es un parrafo con ID</p>
